<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.example.sulleynguyen.apporderfood.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:layout_above="@+id/lnRegisterFrame"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/size_10dp"
        android:padding="@dimen/size_10dp"
        android:textStyle="bold"
        android:textSize="@dimen/size_title_register"/>

    <LinearLayout
        android:id="@+id/lnRegisterFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <EditText
            android:id="@+id/edUserNameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/user_name"
            android:textColorHint="@color/colorGrey"
            android:padding="@dimen/size_10dp"
            android:layout_margin="@dimen/size_10dp"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/size_10dp"
            android:textColor="@color/colorGrey"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/edPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/password"
            android:textColorHint="@color/colorGrey"
            android:padding="@dimen/size_10dp"
            android:layout_margin="@dimen/size_10dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/size_10dp"
            android:inputType="textPassword"
            android:textColor="@color/colorGrey"
            android:singleLine="true"
            />

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/rdMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/rdFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"/>
        </RadioGroup>

        <EditText
            android:id="@+id/edBirthdayRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/birthDay"
            android:textColorHint="@color/colorGrey"
            android:padding="@dimen/size_10dp"
            android:layout_margin="@dimen/size_10dp"
            android:drawableLeft="@android:drawable/ic_menu_my_calendar"
            android:drawablePadding="@dimen/size_10dp"
            android:textColor="@color/colorGrey"
            android:singleLine="true"
            android:focusableInTouchMode="true"
            />
        <EditText
            android:id="@+id/edIdCardRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/idCard"
            android:textColorHint="@color/colorGrey"
            android:padding="@dimen/size_10dp"
            android:layout_margin="@dimen/size_10dp"
            android:drawableLeft="@drawable/idcard"
            android:drawablePadding="@dimen/size_10dp"
            android:textColor="@color/colorGrey"
            android:singleLine="true"
            android:inputType="number"
            android:maxLength="9"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOKRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OK_text"
                android:layout_weight="1"
                android:background="@color/colorBgButtonGreen"
                android:padding="@dimen/size_10dp"
                android:layout_margin="@dimen/size_10dp"
                />
            <Button
                android:id="@+id/btnExitRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Exit_text"
                android:layout_weight="1"
                android:padding="@dimen/size_10dp"
                android:background="@color/colorBgButtonOrange"
                android:layout_margin="@dimen/size_10dp"
                />


        </LinearLayout>

    </LinearLayout>
    

</RelativeLayout>
